[package]
name = "ltg_push"
version = "0.2.0"
authors = ["Maxim Lis <ralvke@gmail.com>"]
description = "Push log files updates to Telegram"
license = "MIT"
repository = "https://github.com/Ralvke/ltg_push"

[dependencies]
serde = "1.0.5"
serde_derive = "1.0.2"
serde_yaml = "0.7.0"
serde_json = "1.0.2"
notify = "4.0.1"
hyper = "0.10.10"
hyper-native-tls = "0.2.2"
url = "1.4.0"
regex = "0.2.1"
